force-app/main/default/objects/Audit_Trail__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field/Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>