force-app/main/default/objects/Audit_Trail__c/fields/Membership_Activity__c.field-meta.xml
<CustomField>
    <fullName>Membership_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Activity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Audit Trail</relationshipLabel>
    <relationshipName>Audit_Trail</relationshipName>
    <type>Lookup</type>
</CustomField>