force-app/main/default/objects/Audit_Trail__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Value</label>
    <type>TextArea</type>
</CustomField>