force-app/main/default/objects/Audit_Trail__c/fields/Original_Value__c.field-meta.xml
<CustomField>
    <fullName>Original_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Value</label>
    <type>TextArea</type>
</CustomField>